
2022-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (next_word_is_comment_paragraph_name): extracted from (ppinput)
	* pplex.l (get_word): new function to extract word and use in
	  (is_condition_directive_clause, next_word_is_comment_paragraph_name)
	* reserved.c, scanner.l, tree.h: renamed cb_memcpy_upper to
	  cb_memcpy_upper, as it does not follow strncpy rules
	* reserved.c (cb_strcasecmp) streamlined from glibc implementation
	* reserved.c, cobc.h: exported cb_strcasecmp
	* cobc.c, parser.y, ppparse.y, typeck.c: replaced locale-aware
	  strcasecmp with cb_strcasecmp where possible
	* cobc.c, codegen.c, field.c, help.c, parser.y, pplex.l, ppparse.y,
	  scanner.l, tree.c, cobc.h: cleanup of header inclusion (stdio.h,
	  string.h, strings.h)

2022-02-20  Ron Norman <rjn@inglenet.com>

	* tree.h,tree.h: Reinstated 'real_digits' for PICTURE 
	* codegen.c: Emit cob_field_attr using 'real_digits' if P was in the PIC
	* typeck.c: For COMP-5 with P in PIC, use pic->digits to recompute data
				size when checking size of literal

2022-02-16  Ron Norman <rjn@inglenet.com>

	* parser.y: Remove warning about DISPLAY OMITTED

2022-02-13  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix for setting initial values for WORKING-STORAGE
				with multiple OCCURS and VALUES

2022-02-12  Ron Norman <rjn@inglenet.com>

	* codegen.c: corrected for CB_TAG_REPORT_LINE
				Removed some code under #ifdef COB_TREE_DEBUG as it does not
				compile

2022-02-08  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_cond): attach source reference for all possible
	  kind of conditions
	* codegen.c: removed check for "has condition a reference" or disabled
	  this within [COB_TREE_DEBUG]

2022-02-06  Ron Norman <rjn@inglenet.com>

	* codegen.c: if verb changes then emit trace/debug code, too

2022-01-28  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_write): changed configuration check and warning
	  for cb_sequential_advancing to dialect variant
